[project]
name = "opensees"
version = "0.0.65"
authors = [
  {name="Claudio M. Perez"}
  # <50180406+claudioperez@users.noreply.github.com>"
]

license = {file = "about/LICENSE"}

readme = "about/README.md"

description = "Fast nonlinear finite element analysis."

classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Science/Research',
    'Intended Audience :: Developers',
#   'License :: OSI Approved :: BSD License',

    'Programming Language :: C',
    'Programming Language :: C++',
    'Programming Language :: Fortran',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3 :: Only',

    'Topic :: Software Development',
    'Topic :: Scientific/Engineering',

    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX',
    'Operating System :: Unix',
    'Operating System :: MacOS',
]

keywords = [
    "seismic",
    "structural-analysis",
    "finite-element-analysis",
    "earthquake",
    "engineering",
] 

dependencies = [
    "shps", # Shape functions and quadrature
    "numpy < 1.20.0; python_version<'3.8'",
    "numpy ; python_version>='3.8'",

# Full-featured REPL
    "pyparsing",
    "prompt_toolkit",
    "pygments",
    "platformdirs"
]

[project.optional-dependencies]
testing = [
    "pytest >= 4.6",
    "pytest-checkdocs >= 2.4",
    "pytest-flake8",
    "nbmake"
]

py = ["openseespy"]

rt = [
    "pyparsing",
    "prompt_toolkit",
    "pygments"
]

docs = [
    "elstir",
    "mkdocs-material"
]

[project.urls]
Examples = "https://stairlab.github.io/opensees-gallery"
Repository = "https://github.com/claudioperez/opensees"
Organization = "https://stairlab.berkeley.edu"
# Documentation = "https://brace2.github.io/OpenSeesRT"

[build-system]
requires = [
    "amoeba-build >= 0.0.12",
    "pybind11",
    "setuptools >= 52.0.2",
]

build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["libg3*", "site*"]

[tool.setuptools.package-data]
opensees = ["*.py", "*.so", "*.dll", "*.dylib"]

[tool.setuptools.exclude-package-data]
opensees = ["site*", "docs*", "*.html", "*.cmake"]


[tool.cibuildwheel]
# manylinux-x86_64-image="manylinux_2_28"
# manylinux-x86_64-image="manylinux_2_24"
manylinux-x86_64-image="manylinux2014"

[tool.cibuildwheel.windows]
skip = ["pp*", "*musllinux*", "cp36*", "*i686*", "UNKNOWN*", "cp37*", "cp38*", "cp39*", "cp310*", "cp311*"] # "cp38*", "cp37*", "cp39*"] # "cp311*", "cp312*"

[tool.cibuildwheel.macos]
skip = ["*arm64*", "pp*", "cp36*", "*i686*", "UNKNOWN*", "cp37*"] # "cp311*", "cp312*"

[tool.cibuildwheel.linux]
skip = ["pp*", "*musllinux*", "cp36*", "*i686*", "UNKNOWN*"] # "cp38*", "cp37*", "cp39*"] # "cp311*", "cp312*"
before-all = "yum install -y tcl-devel mysql-devel openblas-devel" # lapack-devel
repair-wheel-command = "auditwheel repair --exclude libOpenSeesRT.so  -w {dest_dir} {wheel}"

