#==============================================================================
# 
#        OpenSees -- Open System For Earthquake Engineering Simulation
#                Pacific Earthquake Engineering Research Center
#
#==============================================================================

add_subdirectory(handler)
add_subdirectory(matrix)
add_subdirectory(logging)
add_subdirectory(tagged)
add_subdirectory(domain)
add_subdirectory(recorder)
add_subdirectory(actor)

add_subdirectory(material)
add_subdirectory(quadrature)
add_subdirectory(interpolate)
add_subdirectory(coordTransformation)
add_subdirectory(element)

add_subdirectory(graph)
add_subdirectory(system_of_eqn)
add_subdirectory(analysis)

add_subdirectory(runtime)

add_subdirectory(database)
add_subdirectory(utility)
add_subdirectory(damage)

add_subdirectory(parallel)

add_subdirectory(executable)
add_subdirectory(testing)
