#==============================================================================
# 
#        OpenSees -- Open System For Earthquake Engineering Simulation
#                Pacific Earthquake Engineering Research Center
#
#==============================================================================
add_library(OPS_Api OBJECT)

target_sources(OPS_Api
    PUBLIC
    PUBLIC
)
